kubernetes/apps/ai/open-webui/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.ajgon.casa/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: open-webui-egress-internal
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: open-webui
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: bifrost
        - matchLabels:
            app.kubernetes.io/name: openedai-speech
        - matchLabels:
            app.kubernetes.io/name: whisper
    - toCIDRSet:
        - cidr: 192.168.2.0/24
      toPorts:
        - ports:
            - port: "80"
            - port: "443"
    - toFQDNs:
        - matchName: cas-bridge.xethub.hf.co
        - matchName: cas-server.xethub.hf.co
        - matchName: huggingface.co
        - matchName: transfer.xethub.hf.co
        - matchName: us.aws.cdn.hf.co
      toPorts:
        - ports:
            - port: "443"
